# meshify

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.in  run_hunyuan3d_watch.py
Hunyuan3D-2/hy3dgen/texgen/: pipelines.py
Hunyuan3D-2/hy3dgen/texgen/custom_rasterizer/: setup.py
Hunyuan3D-2/hy3dgen/texgen/custom_rasterizer/custom_rasterizer/: render.py
Hunyuan3D-2/hy3dgen/texgen/custom_rasterizer/lib/custom_rasterizer_kernel/: rasterizer.cpp  rasterizer.h
Hunyuan3D-2/hy3dgen/texgen/differentiable_renderer/: mesh_render.py
Hunyuan3D-2/hy3dgen/texgen/hunyuanpaint/: pipeline.py
Hunyuan3D-2/hy3dgen/texgen/utils/: dehighlight_utils.py  multiview_utils.py
app/: __init__.py  config.py  database.py  events.py  jobs.py  main.py  mesh_pipeline.py  store.py
frontend/: index.html  styles.css  tsconfig.json
frontend/src/: api.ts  main.ts  types.ts
scripts/: build_frontend.sh
